--- a/dada/DADA/Template/templates/setup_info_login_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_login_screen.tmpl
@@ -18,7 +18,7 @@
   <br />
   <input type="hidden" name="f" value="setup_info" />
   <input type="password" name="root_password" id="root_password" value="" maxlength="24" />
-  <input type="submit" value="Continue..." />
+  <input type="submit" value="Continue..." class="cautionary" />
  </p>
 </form>
 
