I labeled the button. Cause I can.

--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -380,14 +380,14 @@
 	   <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get" target="_blank">
 	    <input type="hidden" name="f"    value="text_list" />
 	    <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-	    <input type="submit" class="plain" value="Open List in New Window" />
+	    <input type="submit" class="plain" value="Open <!-- tmpl_var type_title --> in New Window" />
 	   </form>
 	  </td>
 	  <td>
 	   <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get">
 	    <input type="hidden" name="f"    value="send_list_to_admin" />
 	    <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-	    <input type="submit" class="plain" value="Send List to List Owner" />
+	    <input type="submit" class="plain" value="Send <!-- tmpl_var type_title --> to List Owner" />
 	   </form>
 	  </td>
 	 </tr>
