These changes make a lot of the prototype stuff work for IE 6 and 7

--- a/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
@@ -308,8 +308,7 @@
 					f:                    'previewBatchSendingSpeed', 
 					enable_bulk_batching: $F('enable_bulk_batching'),
 					mass_send_amount:     $F('mass_send_amount'), 
-					bulk_sleep_amount:    $F('bulk_sleep_amount'), 
-
+					bulk_sleep_amount:    $F('bulk_sleep_amount')
 				},
 
 			onCreate: 	 function() {
