--- a/dada/DADA/Template/templates/congrats_screen.tmpl
+++ b/dada/DADA/Template/templates/congrats_screen.tmpl
@@ -71,7 +71,7 @@
   
   <input type="password" name="root_password" id="root_password" maxlength="24" />
   
-  <input type="submit" class="processing" value="Set Up a New List" />
+  <input type="submit" class="processing" value="Set Up a New Mailing List" />
  </p>
 
 
