--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -14,7 +14,8 @@
  
 <script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/dada_mail_admin_js.js" type="text/javascript"></script>
 <script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
-<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/scriptaculous.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var S_PROGRAM_URL -->/javascripts/scriptaculous.js?load=effects" type="text/javascript"></script>
+
 <!-- tmpl_if FCKEDITOR_URL --> 
 	<script src="<!-- tmpl_var FCKEDITOR_URL -->/fckeditor.js" type="text/javascript"></script>
 <!-- /tmpl_if -->
