--- a/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
+++ b/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
@@ -30,7 +30,7 @@
 <!-- tmpl_if unknown_dirs --> 
 	
 	<h2>Missing Directories</h2> 
-	<p>These directories are configured in Dada Mail, but aren't found:</p> 
+	<p>These directories are configured in Dada Mail, but cannot be found:</p> 
 	<ul> 
 	<!-- tmpl_loop unknown_dirs --> 
 		<li><p><!-- tmpl_var dir --></p></li>
