The, List Password Reset stuff wasn't templated out for an unknown reason - so these changes do just that.

--- a/dada/DADA/Template/templates/error_invalid_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_invalid_password_screen.tmpl
@@ -1,46 +1,78 @@
 <!-- begin error_invalid_password_screen.tmpl --> 
 	<h1>
-	 Your Password is Incorrect
+	 Your Mailing List Login Was Not Valid
 	</h1> 
 
 	<p>
-	The password you gave me doesn't seem to be correct. 
-	You might have typed it in wrong. Try typing it in again. 
-	If you forgot your password, have it emailed back to you.
+	The Mailing List Password you've entered to Log Into: 
 	</p> 
 
+	<ul>
+		<li><p><!-- tmpl_var list_settings.list_name --></p></li>
+	</ul> 
+	
+	<p>was not validated correctly. Make sure:</p>
+
+	<ul>
+		<li>
+			<p>
+				You've entered the Mailing List Password correctly. 
+			</p>
+		</li>
+		<li>
+			<p>
+			Browser, Cookies, Firewall settings permit you to log in successfully
+			</p>
+		</li>
+	
+	</ul>
 
 <!-- tmpl_unless DISABLE_OUTSIDE_LOGINS --> 
 
-    <p>
-	 <strong>
-		 Try signing into <!-- tmpl_var list_settings.list_name --> again
-	 </strong>
- 	</p>
-    
+    <fieldset>
+	 <legend>
+		 Log Into <!-- tmpl_var list_settings.list_name -->
+	 </legend>
+ 	
+    <p style="text-align:center">
+		     Enter Your
+		     <label for="admin_password">
+		      Mailing List Password:
+		     </label>
+		    </p>
+		
 	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
      <input type="hidden" name="flavor" value="login" />
      <input type="hidden" name="admin_list" value="<!-- tmpl_var list_settings.list -->" />
 	 <input type="hidden" name="referer" value="<!-- tmpl_var ENV_SCRIPT_URI -->" /><!-- DEV: perhaps even switch this out with js? --> 
-	<p>
-      <input type="password" name="admin_password" maxlength="24" /> 
+    <p style="text-align:center">
+
+      <input type="password" name="admin_password" id="admin_password" maxlength="24" /> 
       <input type="submit" class="plain" value="Login" />
      </p>
     </form> 
+   </fieldset> 
+
 
 <!-- /tmpl_unless --> 
 
+<fieldset>
+ <legend>
+	 Reset Your Mailing List Password
+ </legend>
+
+<p>
+ Resetting the Mailing List Password for this Mailing List will require email confirmation by the List Owner. 
+</p>
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
  <input type="hidden" name="flavor" value="email_password" />
  <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" />
  <p align="center">
-  <input type="submit" class="plain" value="Mail <!-- tmpl_var list_settings.list_owner_email escape="HTML" --> a new password" />
+  <input type="submit" class="cautionary" value="Reset Your Mailing List Password" />
  </p>
 </form> 
 
-<p>If you keep getting bounced back to this screen, 
-make sure that cookies are turned 'on' in your Web browser.</p>
-
+</fieldset>
 
 <!-- end error_invalid_password_screen.tmpl --> 
