--- a/dada/DADA/Template/templates/error_no_list_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_list_password_screen.tmpl
@@ -11,8 +11,15 @@
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
  <input type="hidden" name="flavor" value="email_password" />
  <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" />
- <p align="center">
-  <input type="submit" class="plain" value="Mail <!-- tmpl_var list_settings.list_owner_email --> a new password" />
+ <p style="text-align:center">
+	     Enter in your
+	     <label for="admin_password">
+	      Mailing List Password:
+	     </label>
+	    </p>
+	
+	 <p style="text-align:center">
+  <input type="submit" class="cautionary" value="Email <!-- tmpl_var name="list_settings.list_name" ESCAPE="HTML" -->'s List Owner a New Mailing List Password" />
  </p>
 </form>
 
