--- a/dada/DADA/Template/templates/list_login_form.tmpl
+++ b/dada/DADA/Template/templates/list_login_form.tmpl
@@ -15,9 +15,9 @@
   <tr>
    <td valign="top">
     <p>
-     Type in your
+     Enter in your
      <label for="admin_password">
-      List Password:
+      Mailing List Password:
      </label>
     </p>
    </td>
