Minor tweaks to this screen.

--- a/dada/DADA/Template/templates/delete_email_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_email_screen.tmpl
@@ -38,9 +38,9 @@
 
     <p>
       <label for="delete_list">
-            Enter
+              Enter
      </label> 
-      the addresses you would like to remove, below: 
+     addresses (one subscriber per line):
 </p>
 
 
