--- a/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
+++ b/dada/DADA/Template/templates/message_headers_fieldset_widget.tmpl
@@ -114,7 +114,7 @@
 		   </td>
 		   <td>
 		    <p>
-		     <input type="text" name="Return-Path" id="Return-Path" value="[list_settings.admin_email]" class="full" />
+		     <input type="text" name="Return-Path" id="Return-Path" value="<!-- tmpl_var list_settings.admin_email -->" class="full" />
 		    </p>
 		   </td>
 		  </tr>
