--- a/dada/DADA/Template/templates/sending_tuning_options.tmpl
+++ b/dada/DADA/Template/templates/sending_tuning_options.tmpl
@@ -3,7 +3,7 @@
 <p>
   Mail Sending
 	&#187;
-   <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sending_options">
+   <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sending_preferences">
 	Sending Preferences 
   </a>
  &#187;
