--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -310,7 +310,7 @@ $ADMIN_MENU = [
 				
 					{-Title      => 'Sending Preferences',
 					 -Title_URL  => "$S_PROGRAM_URL?f=sending_preferences",
-					 -Function   => 'sending_options',
+					 -Function   => 'sending_preferences',
 					 -Activated  => 1,
 					},
 
