These are some fixes for all the things I just broke, from that last commit.

--- a/dada/DADA/Template/templates/edit_html_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_html_type_screen.tmpl
@@ -16,6 +16,13 @@
  A list of relevant tags is shown at the end of this screen.
 </p>
 
+<!-- tmpl_if template_oldstyle_backwards_compatibility --> 
+	<p class="alert">Old Style template tag support is enabled.</p>
+<!-- tmpl_else --> 
+	<p class="alert">Old Style template tag support has been disbled.</p>
+<!-- /tmpl_if -->
+
+
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">
 
 
