--- a/dada/DADA/Template/templates/view_archive_index_screen.tmpl
+++ b/dada/DADA/Template/templates/view_archive_index_screen.tmpl
@@ -61,7 +61,7 @@
 	    
 	    <td> 
 	     <p>
-			<!-- tmpl_var from -->
+			<!-- tmpl_var name="from" ESCAPE="HTML" -->
 		</p>
 		</td>
 	    
@@ -70,7 +70,7 @@
 	    <td> 
 	     <p>
 	     <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=view_archive&id=<!-- tmpl_var id -->">
-			<!-- tmpl_var subject -->
+			<!-- tmpl_var name="subject" ESCAPE="HTML" -->
 			</a>
 		</p>
 		</td>
