--- a/dada/DADA/Template/templates/view_archive_screen.tmpl
+++ b/dada/DADA/Template/templates/view_archive_screen.tmpl
@@ -11,7 +11,7 @@
 </p>
 
 <h2>
- Subject: <!-- tmpl_var subject -->
+ Subject: <!-- tmpl_var name="subject" ESCAPE="HTML" -->
 </h2>
 
 <iframe src="<!-- tmpl_var S_PROGRAM_URL -->?f=archive_bare;l=<!-- tmpl_var list_settings.list-->;id=<!-- tmpl_var id -->;admin=1" id="archived_message_body_container">
