--- a/dada/DADA/Template/templates/edit_template_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_template_screen.tmpl
@@ -19,7 +19,11 @@
 		Archive Screens</a>.
 </p>
 
-	
+<!-- tmpl_if template_oldstyle_backwards_compatibility --> 
+	<p class="alert">Old Style template tag support is enabled.</p>
+<!-- tmpl_else --> 
+	<p class="alert">Old Style template tag support has been disbled.</p>
+<!-- /tmpl_if --> 
 
 <form name="the_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
 
