Changed the names of the $profile config variables. I'm sure that won't cause any problems.

--- a/dada/DADA/Template/templates/edit_html_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_html_type_screen.tmpl
@@ -19,7 +19,7 @@
 <!-- tmpl_if template_oldstyle_backwards_compatibility --> 
 	<p class="alert">Old Style template tag support is enabled.</p>
 <!-- tmpl_else --> 
-	<p class="alert">Old Style template tag support has been disbled.</p>
+	<p class="alert">Old Style template tag support has been disabled.</p>
 <!-- /tmpl_if -->
 
 
