--- a/dada/DADA/Template/templates/sending_monitor_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_screen.tmpl
@@ -18,7 +18,7 @@
 <!-- tmpl_if header_subject_label --> 
 
 	 &#187;
-	 <!-- tmpl_var header_subject_label --> 
+	 <!-- tmpl_var name="header_subject_label" escape="HTML" --> 
 
 	</p>
 
@@ -98,7 +98,7 @@
 	  <tr> 
 	   <td> 
 	    <h1> 
-	     <!-- tmpl_var header_subject_label --> 
+	     <!-- tmpl_var name="header_subject_label" ESCAPE="HTML" --> 
 	    </h1> 
 	   </td>
 	   <td> 
