--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -74,7 +74,7 @@
 		     <!-- tmpl_var MAILPROG -->
 		    </label>
 		    <br />
-This will ultimately set the 'Return-Path' email header to the list administration email address (justin@example.com), and bounced messages will return to that address. Otherwise, they will go to the list owner. 			<br /> 
+This will ultimately set the 'Return-Path' email header to the list administration email address (<!-- tmpl_var list_settings.list_admin_email --> ), and bounced messages will return to that address. Otherwise, they will go to the list owner. 			<br /> 
 		   <!-- tmpl_if comment -->
 		 	<!-- tmpl_var f_flag_settings -->
 		   <!-- /tmpl_if --> 
