Tweaks, little fixes, things like that,

--- a/dada/DADA/Template/templates/change_password_screen.tmpl
+++ b/dada/DADA/Template/templates/change_password_screen.tmpl
@@ -3,8 +3,8 @@
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <p>
- After you have changed your password, you will 
- need to log back into this list's control panel.
+ After you have changed your Mailing List Password, you will 
+ be required to log back into your Mailing List control panel, using your new Mailing  List Password.
 </p>
 
 <form name="default_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
