--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -94,7 +94,7 @@
 		This email message is sent when someone requests to be subscribed to your list. 
 	</p>
 	<p class="alert">
-		Make sure to place the, <strong><!-- tmpl_var list_confirm_subscribe_link --></strong> tag in the body of this email message!
+		Make sure to place the, <strong>&lt;!-- tmpl_var list_confirm_subscribe_link --&gt;</strong> tag in the body of this email message!
 	</p>
 	
 	<!-- tmpl_if list_settings.no_confirm_email --> 
@@ -151,7 +151,7 @@
 	<!-- /tmpl_if --> 
 	
 	<p class="alert">
-		Make sure to place the, <strong><!-- tmpl_var list_confirm_unsubscribe_link --></strong> tag in the body of this email message!
+		Make sure to place the, <strong>&lt;!-- tmpl_var list_confirm_unsubscribe_link --&gt;</strong> tag in the body of this email message!
 	</p>
 	
 		<p>
