--- a/dada/DADA/Template/templates/error_no_admin_permissions_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_admin_permissions_screen.tmpl
@@ -1,11 +1,15 @@
 <!-- begin error_no_admin_permissions_screen.tmpl --> 
 
-<h1>Sorry,</h1> 
+<h1>
+	Yikes!
+</h1>
+<p>
+	It seems that you have not been given the permission to use/view this screen and this feature has been disabled.
+</p>
+<p>
+	To access this screen, log in using the, <strong><!-- tmpl_var PROGRAM_NAME --> Root Password</strong>
+</p>
 
-<p>It seems that you have not been given the permission to use/view this screen. 
-It's most likely that this feature has been shut off by the Main Administrator.</p>
-
-<p>To access this screen, log in using your <!-- tmpl_var PROGRAM_NAME --> Root Password</p> 
 
 
 <!-- end error_no_admin_permissions_screen.tmpl --> 
